tests/baselines/reference/mergedDeclarations2.errors.txt
tests/cases/compiler/mergedDeclarations2.ts(9,20): error TS2304: Cannot find name 'b'.


==== tests/cases/compiler/mergedDeclarations2.ts (1 errors) ====
    enum Foo {
        b
    }
    enum Foo {
        a = b
    }
    
    module Foo {
        export var x = b
                       ~
!!! error TS2304: Cannot find name 'b'.
    }